@@ -1,8 +1,18 @@
 <?xml version="1.0"?>
 <!-- $Id$ -->
 <configuration>
+ <configsection name="backends">
+  <configheader>Filter Backends</configheader>
+  <configmultienum name="available" desc="Which filter backends from the
+   configuration in config/backends.php should be used?">imap
+   <values>
+    <configspecial application="filter" name="backends"/>
+   </values>
+  </configmultienum>
+ </configsection>
+
  <configsection name="storage">
-  <configheader>Ingo Rules Storage</configheader>
+  <configheader>Rules Storage</configheader>
   <configswitch name="driver" desc="What storage driver should we use?">sql
    <case name="prefs" desc="Preference System"/>
    <case name="sql" desc="SQL">
@@ -18,7 +28,7 @@
  </configsection>
 
  <configsection name="rules">
-  <configheader>Ingo Rules Options</configheader>
+  <configheader>Rules Options</configheader>
   <configboolean name="userheader" desc="Allow users to manually enter Header
   fields to search by in the Rule edit screen?">true</configboolean>
   <configboolean name="usefolderapi" desc="Use the Horde 'mail/folderlist' API
