@@ -129,22 +129,10 @@ Configuring Ingo
 
 3. Configuring Ingo
 
-   To configure Ingo, change to the ``config/`` directory of the installed
-   distribution, and make copies of all of the configuration ``dist`` files
-   without the ``dist`` suffix::
-
-      cd config/
-      for foo in *.dist; do cp $foo `basename $foo .dist`; done
-
-   Or on Windows::
-
-      copy *.dist *.
-
-   Documentation on the format of those files can be found in each file.  With
-   the exception of the ``conf.*`` files (see below) and ``backends.php``, the
-   other files in ``config/`` need only be modified if you wish to customize
-   Ingo's appearance or behavior, as the defaults will be correct for most
-   sites.
+   Documentation on the format and purpose of the configuration files in the
+   ``config/`` directory can be found in each file.  You may edit these files
+   if you wish to customize Ingo's appearance and behavior.  The defaults will
+   be correct for most sites.
 
    You must login to Horde as a Horde Administrator to finish the
    configuration of Ingo.  Use the Horde ``Administration`` menu item to get
