@@ -218,4 +218,14 @@ class Ingo_Application extends Horde_Registry_Application
         }
     }
 
+    /**
+     */
+    public function configSpecialValues($what)
+    {
+        switch ($what) {
+        case 'backends':
+            $backends = Horde::loadConfiguration('backends.php', 'backends', 'ingo');
+            return array_combine(array_keys($backends), array_keys($backends));
+        }
+    }
 }
