@@ -2,6 +2,7 @@
 v2.0-git
 --------
 
+[jan] Provide default configuration files instead of .dist versions.
 [jan] Rename 'driver' configuration and classes to 'transport' to avoid
       confusion with script and storage drivers.
 [mms] Use IMP API for IMAP actions.
